2008-06-20/21 timystery
	* renaming of hddtemp and acpi features available
	* whitelist for sd and hd disks only
	* Update of German translation

2008-06-16 timystery
    * added switch to suppress hddtemp error dialog
    * moved description of chosen sensor to bottom of combobox

2008-06-13 timystery
    * added ability to not display units in text view
    * add default command via g_strdup instead of constant value
    * did NOT replace check for hddtemp!=0 and /dev/fd* by ==0; would be very very wrong
    * refresh ACPI values properly?
    * added option to have smaller spacings between columns in textual display mode

2008-03-04 timystery
    * began adding checkbox to not display the units in text view

2008-02-29 timystery
    * removed some minor mem leaks
    * changed error handling with hddtemp stuff
    * changed my mind to start the netcat/nc stuff for 0.11.0 (0.10.99.5 and later)

2007-12-14 timystery
    * added support for libsensors4

2007-12-11 timystery
    * removed remainders of playing around with g_spawn*
    * removed some debug statements
    * added another check for hddtemp not being installed properly.
    * acpi working?
    * removed bug leading to failing assertion when removing the graphical
    labels, especially when toggling sensors features.

2007-11-18 timystery
    * Hddtemp can be specified at configure-time now and no longer relies
    statically on /usr/sbin .
    * acpi implementation going on.

2007-11-15 timystery
    * Rewrote big parts of configure.in.in to better support enable/disable.

2007-11-10 timystery
    * Went through the plugin with valgrind and removed lots of sources for
    data accumulation.

2006-10 - 2007-11 timystery

    * New internal structure being able to run with ACPI, hddtemp and lm
      sensors independently, should make plugin work on any OS.
    * new settings interface
    * new translations

2005-11-02 17:19  byunghyunchoi

    * xfce4-fsguard-plugin/trunk/po/ko.po,